# data-encoding

./: data-encoding.opam  dune-project
src/: binary_description.re  binary_description.rei  binary_error.re  binary_error.rei  binary_length.re  binary_length.rei  binary_reader.re  binary_reader.rei  binary_schema.re  binary_schema.rei  binary_size.re  binary_size.rei  binary_stream.re  binary_stream.rei  binary_stream_reader.re  binary_stream_reader.rei  binary_writer.re  binary_writer.rei  bson.re  bson.rei  data_encoding.re  data_encoding.rei  encoding.re  encoding.rei  json.re  json.rei  registration.re  registration.rei  tzEndian.re  tzEndian.rei  with_version.re  with_version.rei
test/: bench_data_encoding.re  dune  helpers.re  invalid_encoding.re  randomized.re  read_failure.re  registrationed.re  success.re  test.re  test_generated.re  types.re  versioned.re  write_failure.re
