(executables
 (modes byte exe)
 (names test test_generated bench_data_encoding)
 (libraries data_encoding alcotest crowbar)
 (flags :standard))

(alias
 (name buildtest)
 (deps test.exe test_generated.exe bench_data_encoding.exe))

(rule
 (alias runtest_test)
 (action
  (run %{exe:test.exe})))

(rule
 (alias runtest_test_generated)
 (action
  (run %{exe:test_generated.exe})))

(alias
 (name runtest)
 (deps
  (alias runtest_test)
  (alias runtest_test_generated)))

(rule
 (alias run_bench)
 (action
  (run %{exe:bench_data_encoding.exe})))
